slowly but surely.
Implemented object previews

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "aframe": "^0.7.1",
     "css-loader": "^0.28.7",
     "font-awesome": "^4.7.0",
+    "handlebars": "^4.0.11",
     "html-loader": "^0.5.1",
     "jquery": "^3.2.1",
     "materialize-css": "^0.100.2",
