--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "raw-loader": "^0.5.1",
     "split.js": "^1.3.5",
     "style-loader": "^0.19.1",
+    "uglifyjs-webpack-plugin": "^1.1.4",
     "url-loader": "^0.6.2",
     "webpack": "^3.10.0",
     "webpack-dev-server": "^2.9.7"
