workspace for each object, toggle visibility and moved packages to CDN to reduce build size

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "pack": "webpack"
+    "pack": "webpack",
+    "webpack-production": "env NODE_ENV=\"production\" webpack"
   },
   "repository": {
     "type": "git",
