Blockly workspaces now a component instead of a class, laid initial ground work for blocks, implemented a basic forever (frame draw) loop, move and rotate blocks.
Currently looking into variables.

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "pack": "webpack",
-    "webpack-production": "env NODE_ENV=\"production\" webpack"
+    "packpro": "env NODE_ENV=\"production\" webpack"
   },
   "repository": {
     "type": "git",
