--- a/package.json
+++ b/package.json
@@ -20,12 +20,9 @@
   "homepage": "https://github.com/mrfrase3/a-blocks#readme",
   "devDependencies": {
     "aframe": "^0.7.1",
+    "aframe-extras": "^3.13.1",
     "css-loader": "^0.28.7",
-    "font-awesome": "^4.7.0",
-    "handlebars": "^4.0.11",
     "html-loader": "^0.5.1",
-    "jquery": "^3.2.1",
-    "materialize-css": "^0.100.2",
     "node-blockly": "^1.0.31",
     "raw-loader": "^0.5.1",
     "split.js": "^1.3.5",
