--- a/package.json
+++ b/package.json
@@ -2,11 +2,12 @@
   "name": "a-blocks",
   "version": "0.0.1",
   "description": "Block based coding for A-Frame",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "pack": "webpack",
-    "packpro": "env NODE_ENV=\"production\" webpack"
+    "packpro": "env NODE_ENV=\"production\" webpack",
+    "prestart": "webpack"
   },
   "repository": {
     "type": "git",
@@ -23,6 +24,7 @@
     "aframe-extras": "^3.13.1",
     "aframe-teleport-controls": "^0.3.1",
     "css-loader": "^0.28.7",
+    "file-saver": "^1.3.3",
     "html-loader": "^0.5.1",
     "node-blockly": "^1.0.31",
     "raw-loader": "^0.5.1",
@@ -32,5 +34,8 @@
     "url-loader": "^0.6.2",
     "webpack": "^3.10.0",
     "webpack-dev-server": "^2.9.7"
+  },
+  "dependencies": {
+    "express": "^4.16.3"
   }
 }
